[package]
name = "ruroonga"
version = "0.4.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
description = "A Rust language binding for Groonga."
keywords = ["FFI"]
license-file = "LICENSE"
homepage = "https://github.com/cosmo0920/ruroonga"

[dependencies]
libc = "~0.2.0"

[dependencies.groonga-sys]
version = "~0.1.0"
path = "groonga-sys"