[package]
name = "groonga-sys"
version = "0.2.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
description = "A Rust language binding for Groonga."
keywords = ["FFI"]
license-file = "../LICENSE"
homepage = "https://github.com/cosmo0920/ruroonga"
links = "groonga"
build = "build.rs"

[dependencies]
libc = "~0.2.0"

[build-dependencies]
pkg-config = "~0.3"